# Las

./: .gitignore  CMakeLists.txt  Containerfile  Readme.md  build_run_las.sh  las.sh  las_setup.sh
src/: Const.hpp  main.cpp
src/commands/: ACommandWrapper.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CutCommand.cpp  CutCommand.hpp  ICommand.hpp  ICommandExecutor.hpp
src/commands/common/: FileDiffParser.cpp  FileDiffParser.hpp  HunksParser.cpp  HunksParser.hpp  OSCommandProxy.cpp  OSCommandProxy.hpp  OSProxyUtils.cpp  OSProxyUtils.hpp  Utils.hpp
src/commands/common/parsers/: DiffParser.cpp  DiffParser.hpp  FileParser.cpp  FileParser.hpp  HunksParser.cpp  HunksParser.hpp  LasParserSmManager.hpp
src/commands/common/writers/: ACodeWriter.hpp  CodeWriterExclude.cpp  CodeWriterExclude.hpp  CodeWriterInclude.cpp  CodeWriterInclude.hpp  FileWriter.cpp  FileWriter.hpp  WriterUtils.hpp
src/commands/cut/: CutCommand.cpp  CutCommand.hpp
src/commands/diff/: DiffCommand.cpp  DiffCommand.hpp  DiffHeadCommand.cpp  DiffHeadCommand.hpp  DiffStagedCommand.cpp  DiffStagedCommand.hpp
src/commands/restore/: RestoreCommand.cpp  RestoreCommand.hpp
src/executors/: Las.cpp  Las.hpp
src/ui/: CmdParser.cpp  CmdParser.hpp
test/: CMakeLists.txt  TestCommandExecutor.hpp  TestDiffCommand.hpp  TestDiffHeadCommand.hpp  TestDiffStagedCommand.hpp
test/inputFiles/: testFile1.cpp  testFile2.hpp  testFile3.cpp
test/inputFilesCPP/: patchTestFile2.diff  testFile1.cpp  testFile2.hpp  testFile2Patch.hpp
test/inputFilesElixir/: testFile1.exs
test/inputFilesPython/: testFile1.py
test/modelFiles/: testFile1Model.cpp  testFile2Model.hpp  testFile3Model.cpp
test/modelFilesCPP/: testFile2Model.hpp  testFile2ModelPatch.hpp
test/modelFilesElixir/: testFile1Model.exs
test/modelFilesPython/: testFile1Model.py
test/testcases/: LasTest.cpp  LasTest.hpp  Utils.hpp
